fix: gap and height issue

--- a/bookies/css/styles.css
+++ b/bookies/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 #linkList li a {
+    display: block;
     color: rgba(0, 0, 0, 0.5);
     font-weight: 500;
     font-size: 12px;
